# jyne

./: .gitignore  .npmignore  ACCESSIBILITY.md  ARCHITECTURE.md  BROWSER_TEST_IMPROVEMENTS.md  BUILD-ALL-RECURSIVE.md  BUILD-RECURSIVE-QUICKSTART.md  BUILDING.md  Browser_TODO.md  CODE_OF_CONDUCT.md  HISTORICAL.md  LICENSE  LLM.md  README.md  TESTING.md  WIDGET_COVERAGE.md  WYSIWYG_implementation_status.md  WYSIWYG_interface_builder_plan.md  blog-post-pseudo-declarative-calculators.md  build-all-recursive.sh  jest-environment-tsyne.js  jest.config.js  more_mvc_like_for_todomvc_app.md  package-lock.json  package.json  test-async-loading-sequence.js  test-async-setup-race.js  test-autoshow-then-setcontent.js  test-browser-headed-simple.js  test-browser-headed.js  test-browser-headed.ts  test-browser-screenshot.js  test-dual-execution.js  test-empty-builder-black-screen.js  test-exact-browser-sequence.js  test-headed-browser.ts  test-same-builder-twice.js  test-setmainmenu-interference.js  test-setmainmenu-shows-window.js  test-show-after-setcontent.js  (+3 more)
bridge/: dialogs.go  go.sum  grpc_server.go  interactions.go  main.go  misc.go  resources.go  scalable_theme.go  types.go  widget_creators.go  widget_properties.go
designer/: .eslintrc.json  README.md  TAURI_SETUP.md  jest.config.js  package-lock.json  package.json  tauri.conf.json  test-toSource.ts
designer/src-tauri/: Cargo.toml
designer/src-tauri/icons/: README.md
designer/src-tauri/src/: main.rs
docs/: ACCESSIBILITY_COMPLETE.md  ACCESSIBILITY_FEATURES.md  API_REFERENCE.md  ARCHITECTURE.md  BRAILLE_ACCESSIBILITY.md  (+13 more)
(+136 files in other folders)
