[package]
name = "tsyne-designer"
version = "1.0.0"
description = "WYSIWYG designer for Tsyne applications"
authors = ["Tsyne Team"]
license = "MIT"
repository = "https://github.com/paul-hammant/tsyne"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["dialog-all", "fs-all", "path-all", "shell-open"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
